--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,79 @@ ul {
     list-style: none;
     column-gap: 25px;
 }
+
+@media only screen and (min-width: 768px) {
+
+header {
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: space-between;
+}
+
+#headername {
+    justify-content: left;
+}
+
+#desktop-header {
+    display: flex;
+    align-items: center;
+    float: right;
+}
+
+nav {
+    display:flex;
+    flex-direction: row;
+    float: right;
+}
+
+#hire {
+    display: flex;
+    width: fit-content;
+    align-items: center;
+}
+
+#desktopmain {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 25px;
+}
+
+#info {
+    max-width: 50%;
+}
+
+#circles {
+    display: flex;
+    float: right;
+}
+
+#circle1 {
+    background: rgba(247, 136, 167, 0.6);
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    margin-right: -100px;
+}
+
+#circle2 {
+    background: rgba(247, 193, 162, 0.7);
+    position: relative;
+    top: 80px;
+    right: -50px;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+
+#circle3 {
+    background:  rgba(207, 130, 213, 0.6);
+    position: relative;
+    top: 30px;
+    right: 30px;
+    border-radius: 50%;
+    width: 75px;
+    height: 75px;
+}
+}
